--- a/package.json
+++ b/package.json
@@ -52,15 +52,16 @@
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
     "@supabase/supabase-js": "^2.0.0",
+    "chalk": "^5.3.0",
     "commander": "^11.1.0",
     "dotenv": "^16.3.1",
-    "ora": "^7.0.1",
-    "chalk": "^5.3.0"
+    "ora": "^7.0.1"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
+    "@types/ora": "^3.1.0",
     "dotenv": "^17.2.0",
     "jest": "^29.5.0",
     "rimraf": "^6.0.0",
