--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/livebydesign2/supa-seed.git"
+    "url": "git+https://github.com/livebydesign2/supa-seed.git"
   },
   "bugs": {
     "url": "https://github.com/livebydesign2/supa-seed/issues"
