--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
     "@types/glob": "^8.1.0",
+    "@types/inquirer": "^9.0.8",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
     "@types/ora": "^3.1.0",
@@ -75,6 +76,7 @@
     "@types/semver": "^7.7.0",
     "@types/tar": "^6.1.13",
     "dotenv": "^17.2.0",
+    "inquirer": "^12.8.2",
     "jest": "^29.5.0",
     "rimraf": "^6.0.0",
     "ts-jest": "^29.1.0",
